--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Instagram</title>
+        <title>Instagram Home by Adriano Russo</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css">
         <script src=https://kit.fontawesome.com/d66666fe26.js crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/style.css">
