aggiornamento logo home

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <main>
             <div class="info">
                 <div class="foto-profilo">
-                    <img src="img/imglogo.jpg">
+                    <img src="img/profilo2.jpg">
                 </div>
                 <div class="info-profilo">
                     <div class="parte1">
