--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <li><i class="far fa-plus-square"></i></li>
                         <li><i class="far fa-compass"></i></li>
                         <li><i class="far fa-heart"></i></li>
-                        <li><img src="img/imglogo.jpg"></li>
+                        <li><img src="img/profilo2.jpg"></li>
                         <div class="tendina">
                             <div class="menu-tendina">
                                 <ul>
